fix in tareas
